added env and more
